[package]
name = "lbtree"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-sdk-apigateway = "1"
aws-sdk-elasticloadbalancingv2 = "1.98.0"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
crossbeam = "0.8"
skim = "0.10.4"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
aws-sdk-ec2 = "1"
color-eyre = "0.6.5"
insta = { version = "1.40", features = ["filters"] }
uuid = { version = "1.0", features = ["v4"] }
