[package]
name = "lbtree"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-apigateway = "1"
aws-sdk-ecs = "1"
aws-sdk-elasticloadbalancingv2 = "1.104.0"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
crossbeam = "0.8"
skim = "0.20.5"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
aws-sdk-ec2 = "1"
insta = { version = "1.40", features = ["filters"] }
uuid = { version = "1.19", features = ["v4"] }
